server/compilers/goLiteJS/src/test/ml1/invalid/package8.go
// no package declaration
type num int
